    * Album artist is now guessed for tracks that do not belong into any
      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * When hovering iPod, UMS or MTP collection in collection browser,
      "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.

  BUGFIXES:
    * Fix transcoding with ffmpeg >= 0.10; patch by Julian Simioni.
    * Fix crash on start when Qt is build with debugging assertions. (BR 285720)
    * Fix URLs in MP3tunes, gpodder.net and Last.fm config dialogs. (BR 299088)
    * Fix drag & drop in playlist layout editor, filename layout editor and
      filter editor for non-english locales. (BR 215402)
    * Fix bug where MySQL password could not be set to 'password'; patch by
      Lachlan Dufton. (BR 272346)
    * Detection and elimination of stale and orphaned iPod tracks now works
      correctly; users are notified about these when iPod is plugged in.
    * iPod playlists now work correctly. (BR 289304)
    * Show correct error when transferring unsupported files to iPod. (BR 234876)
    * Fix m4a tracks transferred as mp4 videos to iPods. Affected users need to
      fully rescan their collection. (BR 268238)
    * Combination of double click and context menu actions caused multiple
      delete of downloaded podcast actions, etc. (BR 297092)
    * Prevent merging tracks with same title but different track (disc) numbers;
      patch by Alexey Neyman.
    * Prevent crash on very quick drag and release of tracks. (BR 295275)
    * Prevent occasional tag corruption on multi-byte UTF8 characters in tags.
    * Do not double-transcode tracks when importing from an audio CD. (BR 263775)
    * Fix resulting filetype when copying a track from Jamendo. (BR 296000)
    * Playlists with a dot in name can now be saved to Playlist Files on Disk. (BR 290318)
    * iPod playlists now appear even when plugged in while Amarok is running. (BR 289303)